force-app/main/default/objects/RR_Customer_Voice__c/RR_Customer_Voice__c.object-meta.xml
<CustomObject>
    <label>Customer Voice</label>
    <nameField>
        <displayFormat>CV-{000}</displayFormat>
        <label>Customer Voice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Voices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>