force-app/main/default/objects/RR_Customer_Voice__c/fields/RR_Concern_Category__c.field-meta.xml
<CustomField>
    <fullName>RR_Concern_Category__c</fullName>
    <label>Concern Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Belt</fullName>
            </value>
            <value>
                <fullName>Switch Gear RH</fullName>
            </value>
            <value>
                <fullName>Switch Gear LH</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Steering</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>PRCD</fullName>
            </value>
            <value>
                <fullName>Lockset</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Horn</fullName>
            </value>
            <value>
                <fullName>Indicator</fullName>
            </value>
            <value>
                <fullName>HeadLamp</fullName>
            </value>
            <value>
                <fullName>TailLamp</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Bootlamp</fullName>
            </value>
            <value>
                <fullName>Centre Stand</fullName>
            </value>
            <value>
                <fullName>Crash Guard</fullName>
            </value>
            <value>
                <fullName>Foot Peg LH</fullName>
            </value>
            <value>
                <fullName>Mode</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Vehicle Power Cut OFF</fullName>
            </value>
            <value>
                <fullName>Side stand</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>