force-app/main/default/objects/RR_Customer_Voice__c/fields/RR_Description__c.field-meta.xml
<CustomField>
    <fullName>RR_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>