force-app/main/default/objects/RR_Customer_Voice__c/fields/RR_Observation_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>RR_Observation_Action_Taken__c</fullName>
    <label>Observation &amp; Action Taken</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>