force-app/main/default/objects/RR_Customer_Voice__c/fields/RR_Related_Images__c.field-meta.xml
<CustomField>
    <fullName>RR_Related_Images__c</fullName>
    <label>Related Images</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>