force-app/main/default/objects/RR_Customer_Voice__c/fields/RR_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>RR_Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RR_Concern_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOC Drop</fullName>
            </value>
            <value>
                <fullName>Insufficient</fullName>
            </value>
            <value>
                <fullName>Improper display</fullName>
            </value>
            <value>
                <fullName>Inlet Mechanism Fault</fullName>
            </value>
            <value>
                <fullName>not charging</fullName>
            </value>
            <value>
                <fullName>Insertion Issue</fullName>
            </value>
            <value>
                <fullName>Solenoid Latching</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
            <value>
                <fullName>Teeth wornout</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Tension</fullName>
            </value>
            <value>
                <fullName>Mode switch Fault</fullName>
            </value>
            <value>
                <fullName>Sticky Throttle</fullName>
            </value>
            <value>
                <fullName>Throttle cutoff</fullName>
            </value>
            <value>
                <fullName>Loose</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Kill Switch Fault</fullName>
            </value>
            <value>
                <fullName>Pre-Load</fullName>
            </value>
            <value>
                <fullName>Oil leak</fullName>
            </value>
            <value>
                <fullName>Spring failure</fullName>
            </value>
            <value>
                <fullName>Inner tube dent</fullName>
            </value>
            <value>
                <fullName>Outer tube damage</fullName>
            </value>
            <value>
                <fullName>Regen Fault</fullName>
            </value>
            <value>
                <fullName>Time issue</fullName>
            </value>
            <value>
                <fullName>Flickering</fullName>
            </value>
            <value>
                <fullName>Not turning ON</fullName>
            </value>
            <value>
                <fullName>Charging time</fullName>
            </value>
            <value>
                <fullName>Blank during ride</fullName>
            </value>
            <value>
                <fullName>Vibration</fullName>
            </value>
            <value>
                <fullName>Fog formation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>