force-app/main/default/objects/RR_Customer_Voice__c/fields/RR_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>RR_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Customer Voices</relationshipLabel>
    <relationshipName>Customer_Voices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>