force-app/main/default/objects/RR_Customer_Voice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RR_Observation_Action_Taken__c</columns>
    <columns>RR_Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>